# chess

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: LinuxToolchain.cmake  WindowsToolchain.cmake
include/: game copy.h  game.h  player copy.h  player.h
src/: chess1.cpp  chess2.cpp  chess3 copy.cpp  chess3.cpp  chess3_copy.cpp
